große änderung - test verordnung

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/dvpdatabase?zeroDateTimeBeha
 
 # Username and password
 spring.datasource.username = root
-spring.datasource.password = root
+#spring.datasource.password = root
 
 # ===============================
 # = JPA / HIBERNATE
